# brainfuck-interpreter

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp
sample-programs/: factorial.bf  primes.bf
src/: Abi.cpp  Abi.h  Asm.cpp  Asm.h  Hashmap.cpp  Hashmap.h  Interpreter.cpp  Interpreter.h  Jit.cpp  Jit.h  main.cpp  types.h
test/: test_hashmap.cpp  test_interpreter.cpp  test_jit.cpp
